// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should make people card with people data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    changeFavorites={[Function]}
    information={
        Object {
            "homeworld": "ocean",
            "homeworldPop": "45000000",
            "name": "R2-D2",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <section
          className="show people-list"
>
          <img
                    alt=""
                    src="r2-d2.jpeg"
          />
          <h3
                    className="people-title"
          >
                    R2-D2
          </h3>
</section>,
        <section
          className="hide people-list"
>
          <h3
                    className="people-title"
          >
                    R2-D2
          </h3>
          <ul>
                    <li>
                              Species: 
                    </li>
                    <li>
                              Homeworld: 
                              ocean
                    </li>
                    <li>
                              Homeworld Population: 
                              45000000
                    </li>
          </ul>
</section>,
      ],
      "className": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt=""
              src="r2-d2.jpeg"
/>,
            <h3
              className="people-title"
>
              R2-D2
</h3>,
          ],
          "className": "show people-list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "",
              "src": "r2-d2.jpeg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "R2-D2",
              "className": "people-title",
            },
            "ref": null,
            "rendered": "R2-D2",
            "type": "h3",
          },
        ],
        "type": "section",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3
              className="people-title"
>
              R2-D2
</h3>,
            <ul>
              <li>
                            Species: 
              </li>
              <li>
                            Homeworld: 
                            ocean
              </li>
              <li>
                            Homeworld Population: 
                            45000000
              </li>
</ul>,
          ],
          "className": "hide people-list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "R2-D2",
              "className": "people-title",
            },
            "ref": null,
            "rendered": "R2-D2",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  Species: 
</li>,
                <li>
                  Homeworld: 
                  ocean
</li>,
                <li>
                  Homeworld Population: 
                  45000000
</li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Species: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Species: ",
                  undefined,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Homeworld: ",
                    "ocean",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Homeworld: ",
                  "ocean",
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Homeworld Population: ",
                    "45000000",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Homeworld Population: ",
                  "45000000",
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <section
            className="show people-list"
>
            <img
                        alt=""
                        src="r2-d2.jpeg"
            />
            <h3
                        className="people-title"
            >
                        R2-D2
            </h3>
</section>,
          <section
            className="hide people-list"
>
            <h3
                        className="people-title"
            >
                        R2-D2
            </h3>
            <ul>
                        <li>
                                    Species: 
                        </li>
                        <li>
                                    Homeworld: 
                                    ocean
                        </li>
                        <li>
                                    Homeworld Population: 
                                    45000000
                        </li>
            </ul>
</section>,
        ],
        "className": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt=""
                src="r2-d2.jpeg"
/>,
              <h3
                className="people-title"
>
                R2-D2
</h3>,
            ],
            "className": "show people-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "",
                "src": "r2-d2.jpeg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "R2-D2",
                "className": "people-title",
              },
              "ref": null,
              "rendered": "R2-D2",
              "type": "h3",
            },
          ],
          "type": "section",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="people-title"
>
                R2-D2
</h3>,
              <ul>
                <li>
                                Species: 
                </li>
                <li>
                                Homeworld: 
                                ocean
                </li>
                <li>
                                Homeworld Population: 
                                45000000
                </li>
</ul>,
            ],
            "className": "hide people-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "R2-D2",
                "className": "people-title",
              },
              "ref": null,
              "rendered": "R2-D2",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li>
                    Species: 
</li>,
                  <li>
                    Homeworld: 
                    ocean
</li>,
                  <li>
                    Homeworld Population: 
                    45000000
</li>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Species: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Species: ",
                    undefined,
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Homeworld: ",
                      "ocean",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Homeworld: ",
                    "ocean",
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Homeworld Population: ",
                      "45000000",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Homeworld Population: ",
                    "45000000",
                  ],
                  "type": "li",
                },
              ],
              "type": "ul",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should make planets card with planets data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    changeFavorites={[Function]}
    information={
        Object {
            "name": "Kamino",
            "residents": Array [
              "Boba Fett",
              "Lama Su",
            ],
            "terrain": "ocean",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <section
          className="show"
>
          <img
                    alt=""
                    src="Kamino.jpeg"
          />
          <h3
                    className="planets-title"
          >
                    Kamino
          </h3>
</section>,
        <section
          className="hide planet-list"
>
          <h3
                    className="planets-title"
          >
                    Kamino
          </h3>
          <ul>
                    <li>
                              Terrain: 
                              ocean
                    </li>
                    <li>
                              Population: 
                    </li>
                    <li>
                              Climate: 
                    </li>
                    <li>
                              Residents:
                              <ul>
                                        <li
                                                  className="long-list"
                                        >
                                                  Boba Fett
                                        </li>
                                        <li
                                                  className="long-list"
                                        >
                                                  Lama Su
                                        </li>
                              </ul>
                               
                    </li>
          </ul>
</section>,
      ],
      "className": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt=""
              src="Kamino.jpeg"
/>,
            <h3
              className="planets-title"
>
              Kamino
</h3>,
          ],
          "className": "show",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "",
              "src": "Kamino.jpeg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Kamino",
              "className": "planets-title",
            },
            "ref": null,
            "rendered": "Kamino",
            "type": "h3",
          },
        ],
        "type": "section",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3
              className="planets-title"
>
              Kamino
</h3>,
            <ul>
              <li>
                            Terrain: 
                            ocean
              </li>
              <li>
                            Population: 
              </li>
              <li>
                            Climate: 
              </li>
              <li>
                            Residents:
                            <ul>
                                          <li
                                                        className="long-list"
                                          >
                                                        Boba Fett
                                          </li>
                                          <li
                                                        className="long-list"
                                          >
                                                        Lama Su
                                          </li>
                            </ul>
                             
              </li>
</ul>,
          ],
          "className": "hide planet-list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Kamino",
              "className": "planets-title",
            },
            "ref": null,
            "rendered": "Kamino",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  Terrain: 
                  ocean
</li>,
                <li>
                  Population: 
</li>,
                <li>
                  Climate: 
</li>,
                <li>
                  Residents:
                  <ul>
                                    <li
                                                      className="long-list"
                                    >
                                                      Boba Fett
                                    </li>
                                    <li
                                                      className="long-list"
                                    >
                                                      Lama Su
                                    </li>
                  </ul>
                   
</li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Terrain: ",
                    "ocean",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Terrain: ",
                  "ocean",
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Population: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Population: ",
                  undefined,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Climate: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Climate: ",
                  undefined,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Residents:",
                    <ul>
                      <li
                                            className="long-list"
                      >
                                            Boba Fett
                      </li>
                      <li
                                            className="long-list"
                      >
                                            Lama Su
                      </li>
</ul>,
                    " ",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Residents:",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <li
                          className="long-list"
>
                          Boba Fett
</li>,
                        <li
                          className="long-list"
>
                          Lama Su
</li>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": "0",
                        "nodeType": "host",
                        "props": Object {
                          "children": "Boba Fett",
                          "className": "long-list",
                        },
                        "ref": null,
                        "rendered": "Boba Fett",
                        "type": "li",
                      },
                      Object {
                        "instance": null,
                        "key": "1",
                        "nodeType": "host",
                        "props": Object {
                          "children": "Lama Su",
                          "className": "long-list",
                        },
                        "ref": null,
                        "rendered": "Lama Su",
                        "type": "li",
                      },
                    ],
                    "type": "ul",
                  },
                  " ",
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <section
            className="show"
>
            <img
                        alt=""
                        src="Kamino.jpeg"
            />
            <h3
                        className="planets-title"
            >
                        Kamino
            </h3>
</section>,
          <section
            className="hide planet-list"
>
            <h3
                        className="planets-title"
            >
                        Kamino
            </h3>
            <ul>
                        <li>
                                    Terrain: 
                                    ocean
                        </li>
                        <li>
                                    Population: 
                        </li>
                        <li>
                                    Climate: 
                        </li>
                        <li>
                                    Residents:
                                    <ul>
                                                <li
                                                            className="long-list"
                                                >
                                                            Boba Fett
                                                </li>
                                                <li
                                                            className="long-list"
                                                >
                                                            Lama Su
                                                </li>
                                    </ul>
                                     
                        </li>
            </ul>
</section>,
        ],
        "className": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt=""
                src="Kamino.jpeg"
/>,
              <h3
                className="planets-title"
>
                Kamino
</h3>,
            ],
            "className": "show",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "",
                "src": "Kamino.jpeg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Kamino",
                "className": "planets-title",
              },
              "ref": null,
              "rendered": "Kamino",
              "type": "h3",
            },
          ],
          "type": "section",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="planets-title"
>
                Kamino
</h3>,
              <ul>
                <li>
                                Terrain: 
                                ocean
                </li>
                <li>
                                Population: 
                </li>
                <li>
                                Climate: 
                </li>
                <li>
                                Residents:
                                <ul>
                                                <li
                                                                className="long-list"
                                                >
                                                                Boba Fett
                                                </li>
                                                <li
                                                                className="long-list"
                                                >
                                                                Lama Su
                                                </li>
                                </ul>
                                 
                </li>
</ul>,
            ],
            "className": "hide planet-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Kamino",
                "className": "planets-title",
              },
              "ref": null,
              "rendered": "Kamino",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li>
                    Terrain: 
                    ocean
</li>,
                  <li>
                    Population: 
</li>,
                  <li>
                    Climate: 
</li>,
                  <li>
                    Residents:
                    <ul>
                                        <li
                                                            className="long-list"
                                        >
                                                            Boba Fett
                                        </li>
                                        <li
                                                            className="long-list"
                                        >
                                                            Lama Su
                                        </li>
                    </ul>
                     
</li>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Terrain: ",
                      "ocean",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Terrain: ",
                    "ocean",
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Population: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Population: ",
                    undefined,
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Climate: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Climate: ",
                    undefined,
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Residents:",
                      <ul>
                        <li
                                                className="long-list"
                        >
                                                Boba Fett
                        </li>
                        <li
                                                className="long-list"
                        >
                                                Lama Su
                        </li>
</ul>,
                      " ",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Residents:",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <li
                            className="long-list"
>
                            Boba Fett
</li>,
                          <li
                            className="long-list"
>
                            Lama Su
</li>,
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": "0",
                          "nodeType": "host",
                          "props": Object {
                            "children": "Boba Fett",
                            "className": "long-list",
                          },
                          "ref": null,
                          "rendered": "Boba Fett",
                          "type": "li",
                        },
                        Object {
                          "instance": null,
                          "key": "1",
                          "nodeType": "host",
                          "props": Object {
                            "children": "Lama Su",
                            "className": "long-list",
                          },
                          "ref": null,
                          "rendered": "Lama Su",
                          "type": "li",
                        },
                      ],
                      "type": "ul",
                    },
                    " ",
                  ],
                  "type": "li",
                },
              ],
              "type": "ul",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should make vehicles card with vehicles data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    changeFavorites={[Function]}
    information={
        Object {
            "class": "wheeled",
            "name": "Sand Crawler",
            "passengers": "30",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <section
          className="show"
>
          <img
                    alt=""
                    src="Sandcrawler.jpeg"
          />
          <h3
                    className="vehicles-title"
          >
                    Sand Crawler
          </h3>
</section>,
        <section
          className="hide vehicle-list"
>
          <h3
                    className="vehicles-title"
          >
                    Sand Crawler
          </h3>
          <ul>
                    <li>
                              Model: 
                    </li>
                    <li>
                              Class: 
                              wheeled
                    </li>
                    <li>
                              Passengers: 
                              30
                    </li>
          </ul>
</section>,
      ],
      "className": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt=""
              src="Sandcrawler.jpeg"
/>,
            <h3
              className="vehicles-title"
>
              Sand Crawler
</h3>,
          ],
          "className": "show",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "",
              "src": "Sandcrawler.jpeg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sand Crawler",
              "className": "vehicles-title",
            },
            "ref": null,
            "rendered": "Sand Crawler",
            "type": "h3",
          },
        ],
        "type": "section",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3
              className="vehicles-title"
>
              Sand Crawler
</h3>,
            <ul>
              <li>
                            Model: 
              </li>
              <li>
                            Class: 
                            wheeled
              </li>
              <li>
                            Passengers: 
                            30
              </li>
</ul>,
          ],
          "className": "hide vehicle-list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sand Crawler",
              "className": "vehicles-title",
            },
            "ref": null,
            "rendered": "Sand Crawler",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  Model: 
</li>,
                <li>
                  Class: 
                  wheeled
</li>,
                <li>
                  Passengers: 
                  30
</li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Model: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Model: ",
                  undefined,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Class: ",
                    "wheeled",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Class: ",
                  "wheeled",
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Passengers: ",
                    "30",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Passengers: ",
                  "30",
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <section
            className="show"
>
            <img
                        alt=""
                        src="Sandcrawler.jpeg"
            />
            <h3
                        className="vehicles-title"
            >
                        Sand Crawler
            </h3>
</section>,
          <section
            className="hide vehicle-list"
>
            <h3
                        className="vehicles-title"
            >
                        Sand Crawler
            </h3>
            <ul>
                        <li>
                                    Model: 
                        </li>
                        <li>
                                    Class: 
                                    wheeled
                        </li>
                        <li>
                                    Passengers: 
                                    30
                        </li>
            </ul>
</section>,
        ],
        "className": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt=""
                src="Sandcrawler.jpeg"
/>,
              <h3
                className="vehicles-title"
>
                Sand Crawler
</h3>,
            ],
            "className": "show",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "",
                "src": "Sandcrawler.jpeg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Sand Crawler",
                "className": "vehicles-title",
              },
              "ref": null,
              "rendered": "Sand Crawler",
              "type": "h3",
            },
          ],
          "type": "section",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="vehicles-title"
>
                Sand Crawler
</h3>,
              <ul>
                <li>
                                Model: 
                </li>
                <li>
                                Class: 
                                wheeled
                </li>
                <li>
                                Passengers: 
                                30
                </li>
</ul>,
            ],
            "className": "hide vehicle-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Sand Crawler",
                "className": "vehicles-title",
              },
              "ref": null,
              "rendered": "Sand Crawler",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li>
                    Model: 
</li>,
                  <li>
                    Class: 
                    wheeled
</li>,
                  <li>
                    Passengers: 
                    30
</li>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Model: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Model: ",
                    undefined,
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Class: ",
                      "wheeled",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Class: ",
                    "wheeled",
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Passengers: ",
                      "30",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Passengers: ",
                    "30",
                  ],
                  "type": "li",
                },
              ],
              "type": "ul",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    information={
        Object {
            "name": "Alderaan",
            "residents": Array [
              "Boba Fett",
              "Lama Su",
            ],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <section
          className="show"
>
          <img
                    alt=""
                    src={undefined}
          />
          <h3
                    className="vehicles-title"
          >
                    Alderaan
          </h3>
</section>,
        <section
          className="hide vehicle-list"
>
          <h3
                    className="vehicles-title"
          >
                    Alderaan
          </h3>
          <ul>
                    <li>
                              Model: 
                    </li>
                    <li>
                              Class: 
                    </li>
                    <li>
                              Passengers: 
                    </li>
          </ul>
</section>,
      ],
      "className": undefined,
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt=""
              src={undefined}
/>,
            <h3
              className="vehicles-title"
>
              Alderaan
</h3>,
          ],
          "className": "show",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "",
              "src": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Alderaan",
              "className": "vehicles-title",
            },
            "ref": null,
            "rendered": "Alderaan",
            "type": "h3",
          },
        ],
        "type": "section",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3
              className="vehicles-title"
>
              Alderaan
</h3>,
            <ul>
              <li>
                            Model: 
              </li>
              <li>
                            Class: 
              </li>
              <li>
                            Passengers: 
              </li>
</ul>,
          ],
          "className": "hide vehicle-list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Alderaan",
              "className": "vehicles-title",
            },
            "ref": null,
            "rendered": "Alderaan",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  Model: 
</li>,
                <li>
                  Class: 
</li>,
                <li>
                  Passengers: 
</li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Model: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Model: ",
                  undefined,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Class: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Class: ",
                  undefined,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Passengers: ",
                    undefined,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Passengers: ",
                  undefined,
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <section
            className="show"
>
            <img
                        alt=""
                        src={undefined}
            />
            <h3
                        className="vehicles-title"
            >
                        Alderaan
            </h3>
</section>,
          <section
            className="hide vehicle-list"
>
            <h3
                        className="vehicles-title"
            >
                        Alderaan
            </h3>
            <ul>
                        <li>
                                    Model: 
                        </li>
                        <li>
                                    Class: 
                        </li>
                        <li>
                                    Passengers: 
                        </li>
            </ul>
</section>,
        ],
        "className": undefined,
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt=""
                src={undefined}
/>,
              <h3
                className="vehicles-title"
>
                Alderaan
</h3>,
            ],
            "className": "show",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "",
                "src": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Alderaan",
                "className": "vehicles-title",
              },
              "ref": null,
              "rendered": "Alderaan",
              "type": "h3",
            },
          ],
          "type": "section",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="vehicles-title"
>
                Alderaan
</h3>,
              <ul>
                <li>
                                Model: 
                </li>
                <li>
                                Class: 
                </li>
                <li>
                                Passengers: 
                </li>
</ul>,
            ],
            "className": "hide vehicle-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Alderaan",
                "className": "vehicles-title",
              },
              "ref": null,
              "rendered": "Alderaan",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li>
                    Model: 
</li>,
                  <li>
                    Class: 
</li>,
                  <li>
                    Passengers: 
</li>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Model: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Model: ",
                    undefined,
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Class: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Class: ",
                    undefined,
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Passengers: ",
                      undefined,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Passengers: ",
                    undefined,
                  ],
                  "type": "li",
                },
              ],
              "type": "ul",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
